--- a/index.html
+++ b/index.html
@@ -81,28 +81,29 @@
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
-    <p>Hello! My name is <strong>[Your Name]</strong>. Below you'll find a bit more about me, including my hobbies, my favorite food, and a fun fact!</p>
+    <p>Hello! My name is <strong>Mar Nawaz</strong>. Below you'll find a bit more about me, including my hobbies, my favorite food, and a fun fact!</p>
 
-    <div class="info-box">
+<div class="info-box">
         <h2>Name</h2>
-        <p>[Your Name]</p>
+        <p>Mar Nawaz</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Your Hobbies]</p>
+        <p>I like to paint and go hiking</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Your Favorite Food]</p>
+        <p>Chocolate Ice cream</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About You]</p>
+        <p>I was born in Afghanistan</p>
     </div>
 </div>
+
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
