--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
-    <p>Hello! My groupmate's name is <strong>[Your Name]</strong>. Here is what I've learned about them.</p>
+    <p>Hello! My groupmate's name is <strong>Xavier Ngwala</strong>. Here is what I've learned about them.</p>
 
     <div class="info-box">
         <h2>Name</h2>
-        <p>[Their Name]</p>
+        <p>Xavier Ngwala</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Their Hobbies]</p>
+        <p>I like to play platformer video games and listen to 80s music.</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Their Favorite Food]</p>
+        <p>Panang curry</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About Them]</p>
+        <p>It snowed on the day that I was born.</p>
     </div>
 </div>
 
