Updated groupmate's info for index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>I like to play platformer video games and listen to 80s music.</p>
+        <p>He likes to play platformer video games and listen to 80s music.</p>
     </div>
 
     <div class="info-box">
@@ -58,7 +58,7 @@
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>It snowed on the day that I was born.</p>
+        <p>It snowed on the day that he was born.</p>
     </div>
 </div>
 
